--- a/home.html
+++ b/home.html
@@ -9,13 +9,12 @@
 <body>
     <header class="header">
         <input type="checkbox" id="chec" />
-        <label for="chec">
+        <label for="chec" class="box-chec">
             <img src="assets/img/menu vertical.png" >
         </label>
-
         <nav>
             <figure class="logo">
-                <img src="assets/img/logo3-removebg-preview.png" alt="logo" class="img-logo">
+                <img src="assets/img/logo3.png" alt="logo" class="img-logo">
             </figure>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -23,11 +22,33 @@
                 <li><a href="#">Forum</a></li>
                 <li><a href="#">Blog</a></li>
             </ul>
+            <div class="linha"></div>
+            <section class="account">
+                <div class="box-perfil">
+                    <img src="assets/img/fotoperfil.png" alt="" class="perfil">
+                </div>
+                <span>Caah_</span>
+            </section>
         </nav>
-
+        <div class="logo-principal">
+            <img src="assets/img/meialogo.png" alt="logo" class="img-principal">
+        </div>
+        <section class="lado-direito">
+            <div class="conteudo-header">
+                <input type="text" class="search">
+                <a href="" class="link">Entrar</a>
+                <a href="" class="link">Registrar-se</a>
+            </div>
+        </section>
     </header>
-
-
-
+    <main>
+        <h2>Principais Comunidades</h2>
+        <section class="box-comunidades">
+            <div class="comunidades"></div>
+            <div class="comunidades"></div>
+            <div class="comunidades"></div>
+            <div class="comunidades"></div>
+        </section>
+    </main>
 </body>
 </html>
