--- a/login.html
+++ b/login.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página de Login</title>
+    <link rel="stylesheet" href="assets/login.css">
 </head>
 <body>
-    
+    <header>
+        <img class="logo" src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="logo">
+    </header>
+    <div class="login-container">
+        <form>
+            <h1>Login</h1>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Senha</label>
+                <input type="password" id="password" name="password" required>
+                <div class="esqueci-senha">
+                    <span>Esqueci minha senha</span>
+                </div>
+            </div>
+            <button type="submit" class="login-btn">Entrar</button>
+            <div class="aviso-cadastro">
+                <span>Não possui uma conta? <span class="cadastrar-roxo"><a href="cadastro.html">Cadastre-se</a></span></span>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
