home modelo  figma pronta

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/home.css">
     <title>Home</title>
 </head>
@@ -44,11 +45,68 @@
     <main>
         <h2>Principais Comunidades</h2>
         <section class="box-comunidades">
-            <div class="comunidades"></div>
-            <div class="comunidades"></div>
-            <div class="comunidades"></div>
-            <div class="comunidades"></div>
+            <div class="comunidades">
+                <img src="assets/img/book.png"  class="icone-comunidade">
+                <span class="comunidade-name">Livros</span>
+            </div>
+            <div class="comunidades">
+                <img src="assets/img/game.png"  class="icone-comunidade" alt="" >
+                <span class="comunidade-name">Jogos</span>
+            </div>
+            <div class="comunidades">
+                <img src="assets/img/song.png"  class="icone-comunidade" alt="">
+                <span class="comunidade-name">Músicas</span>
+            </div>
+            <div class="comunidades">
+                <img src="assets/img/video.png"  class="icone-comunidade1" alt="">
+                <span class="comunidade-name">Filmes e Séries</span>
+            </div>
         </section>
+        <h3>Mais Pesquisados</h3>
+        <section class="box-novidades">
+            <div class="novidade">
+                <img src="assets/img/Anitta-novidades.jpeg" class="img-novidade" alt="">
+                <span>DE MÚSICA</span>
+                <h4 class="titulo-novidade">Anitta vence o ‘Best Latin’ no VMA 2024</h4>
+                <span>Após ter sido indicada para o Best Latin no VMA, Anitta leva o prêmio
+                e se torna a primeira cantora latina a conseguir o feito três vezes consecutivas.</span>
+            </div>
+            <div class="novidade">
+                <img src="assets/img/filme-novidade.jpeg" class="img-novidade" alt="">
+                <span>DE FILMES</span>
+                <h4 class="titulo-novidade">“Ainda Estou Aqui” recebe altas avaliações</h4>
+                <span>Estrelado por Fernanda Torres e com participação de Fernanda Montenegro,
+                foi exibido no festival de Veneza na Itália e recebeu 89% de avaliações positivas.</span>
+            </div>
+            <div class="novidade">
+                <img src="assets/img/minecraft-novidades.jpeg" class="img-novidade" alt="">
+                <span>DE JOGOS</span>
+                <h4 class="titulo-novidade">Mojang anuncia versão nativa para PS5</h4>
+                <span>Após anuciar novas funcionalidades, Mojang também divulga que, além das versões 
+                Java e Bedrock, haverá uma apenas para o PlayStation 5</span>
+            </div>
+        </section>
+        <footer class="rodape">
+            <div class="info-rodape">
+                <img class="logo-rodape" src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="">
+            </div>
+            <div class="info-rodape">
+                <a href="" class="link-rodape">Comunidade de Livros</a>
+                <a href="" class="link-rodape">Comunidade de Jogos</a>
+                <a href="" class="link-rodape">Comunidade de Música</a>
+                <a href="" class="link-rodape">Comunidade de Filmes/Séries</a>
+            </div>
+            <div class="info-rodape">
+                <a href="" class="link-rodape">Política de Privacidade</a>
+                <a href="" class="link-rodape">Regras do Oráculo</a>
+                <a href="" class="link-rodape">Configurações de cookies</a>
+            </div>
+            <div class="info-rodape">
+                <a href="" class="link-rodape"><i class="bi bi-info-circle"></i> Sobre Nós</a>
+                <a href="" class="link-rodape"><i class="bi bi-telephone"></i> Contato</a>
+                <a href="" class="link-rodape"><i class="bi bi-instagram"></i> Instagram</a>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
