--- a/login.html
+++ b/login.html
@@ -12,19 +12,18 @@
     </header>
     <div class="login-container">
         <form>
-            <h1>Login</h1>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" required placeholder="Email (ex: seuemail@gmail.com)">
             </div>
             <div class="form-group">
                 <label for="password">Senha</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" required placeholder="Digite sua senha">
                 <div class="esqueci-senha">
                     <span>Esqueci minha senha</span>
                 </div>
             </div>
-            <button type="submit" class="login-btn">Entrar</button>
+            <button type="submit" class="login-btn"><a href="home.html">Entrar</a></button>
             <div class="aviso-cadastro">
                 <span>Não possui uma conta? <span class="cadastrar-roxo"><a href="cadastro.html">Cadastre-se</a></span></span>
             </div>
