página de postagem pronta

--- a/home.html
+++ b/home.html
@@ -19,9 +19,10 @@
             </figure>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Forum</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="#">Comunidades</a></li>
+                <li><a href="#">Suporte</a></li>
+                <li><a href="#">Reportar</a></li>
+                <li><a href="#"></a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
