alteração de cor na home

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
         </div>
         <section class="lado-direito">
             <div class="conteudo-header">
-                <input type="text" class="search">
+                <input type="text" class="search" placeholder="Pesquise aqui">
                 <a href="" class="link">Entrar</a>
                 <a href="" class="link">Registrar-se</a>
             </div>
