todos os sobre comunidades sem header, tela de denúncia

--- a/suporte.html
+++ b/suporte.html
@@ -1,15 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="regras.css">
+    <link rel="stylesheet" href="assets/suporte.css">
     <title>Suporte</title>
 </head>
+
 <body>
-    <main class="box-title-total">
+    <div class="box-title-total">
         <div class="box-title"></div>
-        <div class="title"><p>Suporte Oráculo</p></div>
+        <div class="title">
+            <p>Suporte Oráculo</p>
+        </div>
         <div class="box-title"></div>
+    </div>
+
+    <main class="all-text-body">
+        <div class="text-body">
+            <p>Bem-vindo à página de suporte do Oráculo! Aqui você encontrará respostas para as dúvidas mais frequentes
+                e terá acesso a um chat para tirar suas dúvidas em tempo real.</p>
+        </div>
+        <div class="title-body-box">
+            <span class="title-body">Dúvidas Frequentes(FAQ)</span>
+        </div>
+        <div class="text-body">
+            <p>Bem-vindo à página de suporte do Oráculo! Aqui você encontrará respostas para as dúvidas mais frequentes
+                e terá acesso a um chat para tirar suas dúvidas em tempo real.</p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">1. O que é o Oráculo?</span>
+            <p class="text-body-box"> O Oráculo é uma plataforma que reúne comunidades focadas em diferentes âmbitos
+                culturais e os mais diversos assuntos, permitindo que usuários participem de discussões sobre livros,
+                músicas, jogos e muito mais.</p>
+        </div>
+
+        <div class="box-text">
+            <span class="title-text">2. Como posso criar uma conta no Oráculo?</span>
+            <p class="text-body-box"> Clique em "Registrar" no canto superior direito da página inicial. Será necessário
+                fornecer um e-mail válido e criar uma senha, dentre outras informações.</p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">3. Posso participar de várias comunidades ao mesmo tempo?</span>
+            <p class="text-body-box"> Sim! No Oráculo, você pode participar de quantas comunidades desejar, desde que
+                respeite as regras específicas de cada uma.</p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">4. Como posso encontrar uma comunidade que me interessa?</span>
+            <p class="text-body-box"> Use a barra de busca na página inicial para procurar comunidades com base nos seus
+                interesses. Você pode buscar por temas, nomes de livros, bandas, jogos e muito mais.</p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">5. Como faço para denunciar um comportamento inadequado em uma comunidade?</span>
+            <p class="text-body-box"> Se você presenciar um comportamento inadequado que viole nossas regras, clique na
+                opção de "Reportar" no menu. Nossa equipe analisará a situação e tomará as devidas providências.</p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">6. Como posso personalizar meu perfil?</span>
+            <p class="text-body-box"> Acesse seu perfil no canto inferior esquerdo do menu e você poderá editar suas
+                informações pessoais, adicionar uma foto de perfil e personalizar seu nome de usuário.
+            </p>
+        </div>
+        <div class="box-text">
+            <span class="title-text">7. O Oráculo é gratuito?</span>
+            <p class="text-body-box"> Sim, a participação nas comunidades do Oráculo é gratuita. No entanto, algumas
+                funcionalidades ou comunidades exclusivas podem exigir uma assinatura premium.</p>
+        </div>
     </main>
+    <div class="linha"></div>
+    <div class="text-info">
+        <div class="box-info-title">
+            <span class="info-title">Chat de Suporte</span>
+        </div>
+        <div class="box-info-text">
+            <span class="info-text">
+                Tem alguma dúvida que não foi respondida acima? Utilize o nosso Chat de Suporte para falar diretamente
+                com um de nossos atendentes.
+                [Clique aqui para acessar o Chat]
+            </span>
+        </div>
+    </div>
+    <div class="linha"></div>
+    <div class="contato">
+        <span class="info-text">Se precisar de mais ajuda, não hesite em nos contatar através do chat ou pelo e-mail: suporte@oraculo.com.</span>
+    </div>
+
+    
+    <main class="main-info">
+        <div class="img-logo">
+            <img src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="">
+        </div>
+        <div class="info">
+            <span>Política de Privacidade</span>
+            <span>Configurações de cookies</span>
+        </div>
+        <div class="info">
+            <span>Regras do Oráculo</span>
+            <span>Suporte</span>
+        </div>
+        <div class="info-2">
+                <span><i class="bi bi-info-circle"></i> Sobre Nós</span>
+                <span><i class="bi bi-telephone"></i> Contato</span>
+                <span><i class="bi bi-instagram"></i> Istagram</span>
+                
+        </div>
+    </main>
+
+
+    </div>
