atualizações nas páginas de comunidades, denuncias, e suporte

--- a/snlivros.html
+++ b/snlivros.html
@@ -10,13 +10,45 @@
 </head>
 
 <body>
-    <div class="box-title-total">
-        <div class="box-title"></div>
-        <div class="title">
-            <p>Sobre a Comunidade Livros</p>
+    <header class="header" id="myHeader">
+        <input type="checkbox" id="chec" />
+        <label for="chec" class="box-chec">
+            <img src="assets/img/menu vertical.png" >
+        </label>
+        <nav class="nav-vertical">
+            <figure class="logo">
+                <img src="assets/img/logo3.png" alt="logo" class="img-logo">
+            </figure>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Comunidades</a></li>
+                <li><a href="#">Suporte</a></li>
+                <li><a href="#">Reportar</a></li>
+                <li><a href="#">Sair</a></li>
+            </ul>
+            <div class="linha"></div>
+            <section class="account">
+                <div class="box-perfil">
+                    <img src="assets/img/fotoperfil.png" alt="" class="perfil">
+                </div>
+                <span>Caah_</span>
+            </section>
+        </nav>
+        <div class="logo-principal">
+            <img src="assets/img/meialogo.png" alt="logo" class="img-principal">
         </div>
-        <div class="box-title"></div>
-    </div>
+        <section class="lado-direito">
+            <div class="conteudo-header">
+                <input type="text" class="search" placeholder="Pesquise aqui">
+            </div>
+        </section>
+    </header>
+	 <section class="titulo">
+        <div class="linha-pag"></div>
+        <h2>Sobre a Comunidade Livros</h2>
+        <div class="linha-pag"></div>
+    </section>
+	
 
 
     <div class="all-text">
@@ -52,8 +84,8 @@
     </div>
 
 
-    <main class="main-info">
-        <div class="img-logo">
+    <footer class="main-info">
+        <div class="img-logoFooter">
             <img src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="">
         </div>
         <div class="info">
@@ -70,7 +102,7 @@
             <span><i class="bi bi-instagram"></i> Istagram</span>
 
         </div>
-    </main>
+    </footer>
 </body>
 
 </html>
