páginas de postagens

--- a/postagemjogos.html
+++ b/postagemjogos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/postagem.css">
     <script src="assets/like.js"></script>
-    <title>Postagem-Livro</title>
+    <title>Postagem-Jogos</title>
 </head>
 <body>
     <header class="header" id="myHeader">
@@ -45,15 +45,15 @@
     <main class="principal">
         <section class="titulo">
             <div class="linha-pag"></div>
-            <h2>Postagem - Livros</h2>
+            <h2>Postagem - Jogos</h2>
             <div class="linha-pag"></div>
         </section>
         <article class="box-tudo">
             <section class="box-info">
                 <div class="info">
                     <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
-                    <a href="" class="link-postagens"><i class="bi bi-journal-bookmark"></i> Editoras</a>
+                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Jogos mais comentados</a>
+                    <a href="" class="link-postagens"><i class="bi bi-controller"></i> Distribuidoras de jogos</a>
                     <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
                     <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
                     <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
@@ -65,14 +65,14 @@
 
                 <section class="postagem">
                     <div class="conta">
-                        <img class="perfil-post" src="assets/img/fotoperfil.png" alt="">
-                        <span>Ana Caroline - @Caah_</span>
+                        <img class="perfil-post" src="assets/img/avatar-jogos.jpg" alt="">
+                        <span>Vitor Pro - @VitorPro</span>
                     </div>
                     <div class="publicacao">
-                        <span>Uau, essa fanart tá simplesmente incrível! 😍 Eu adorei cada detalhe!</span>
+                        <span>Isso vai ser pika hein!</span>
                     </div>
                     <div class="img-post">
-                        <img src="assets/img/postagem-livro.jpg" alt="">
+                        <img src="assets/img/valorant-postagem1.jpg" alt="">
                     </div>
                     <div class="icons-post">
                         <i class="bi bi-heart" onclick="Like()" id="like"></i>
@@ -82,14 +82,14 @@
                 
                 <section class="postagem">
                     <div class="conta">
-                        <img class="perfil-post" src="assets/img/fotoperfil.png" alt="">
-                        <span>@Ana Caroline - @Caah_</span>
+                        <img class="perfil-post" src="assets/img/avatar-jogos.jpg" alt="">
+                        <span>Vitor Pro - @VitorPro</span>
                     </div>
                     <div class="publicacao">
-                        <span>Uau, essa fanart tá simplesmente incrível! 😍 Eu adorei cada detalhe!</span>
+                        <span>Fodah demaisi!!!!!!</span>
                     </div>
                     <div class="img-post">
-                        <img src="assets/img/postagem-livro.jpg" alt="">
+                        <img src="assets/img/valorant-postagem2.jpg" alt="">
                     </div>
                     <div class="icons-post">
                         <i class="bi bi-heart">  </i>
@@ -103,24 +103,24 @@
                 <nav class="sub-comunidade">
                     <select class="sub-comunidade"name="" id="">
                         <option value="pt">Sub-Comunidades</option>
-                        <option value="pt">Trono de Vidro</option>
-                        <option value="pt">Povo do Ar</option>
-                        <option value="pt">ACOTAR</option>
-                        <option value="pt">De Sangue e Cinzas</option>
-                        <option value="pt">Estilhaça-me</option>
-                        <option value="pt">Percy Jackson</option>
-                        <option value="pt">Harry Potter</option>
-                        <option value="pt">Anne Whit E</option>
-                        <option value="pt">Bridgerton</option>
-                        <option value="pt">A Maldição do Tigre</option>
-                        <option value="pt">Jogos Vorazes</option>
-                        <option value="pt">Tudo Pelo Jogo</option>
-                        <option value="pt">Sombra e Ossos</option>
-                        <option value="pt">Cidade da Lua Crescente</option>
-                        <option value="pt">Senhor dos Anéis</option>
-                        <option value="pt">Castelo Animado</option>
-                        <option value="pt">Caraval</option>
-                        <option value="pt">EUVUCP</option>
+                        <option value="pt">Minecraft</option>
+                        <option value="pt">Valorant</option>
+                        <option value="pt">Roblox</option>
+                        <option value="pt">The Sims 4</option>
+                        <option value="pt">Free Fire</option>
+                        <option value="pt">Fortnite</option>
+                        <option value="pt">House Flipper</option>
+                        <option value="pt">Clash Royale</option>
+                        <option value="pt">Clash of Clans</option>
+                        <option value="pt">FNAF</option>
+                        <option value="pt">Poppy Playtime</option>
+                        <option value="pt">The Quarry</option>
+                        <option value="pt">Hay Day</option>
+                        <option value="pt">PUG</option>
+                        <option value="pt">GTA</option>
+                        <option value="pt">Genshin Impact</option>
+                        <option value="pt">Nightmare</option>
+                        <option value="pt">Counter-Strike GO</option>
                     </select>
                 </nav>
             </section>
