--- a/postagemmariafifi.html
+++ b/postagemmariafifi.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/postagem.css">
     <script src="assets/like.js"></script>
-    <title>Postagem-Livro</title>
+    <title>Postagem-Maria Fifi</title>
 </head>
 <body>
     <header class="header" id="myHeader">
@@ -45,15 +45,15 @@
     <main class="principal">
         <section class="titulo">
             <div class="linha-pag"></div>
-            <h2>Postagem - Livros</h2>
+            <h2>Postagem - Maria Fifi</h2>
             <div class="linha-pag"></div>
         </section>
         <article class="box-tudo">
             <section class="box-info">
                 <div class="info">
                     <a href="postagemlivro.html" class="link-postagens"><i class="bi bi-send"></i> Postagens</a>
-                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Livros mais comentados</a>
-                    <a href="" class="link-postagens"><i class="bi bi-journal-bookmark"></i> Editoras</a>
+                    <a href="" class="link-postagens"><i class="bi bi-chat-text"></i> Fofocas mais comentadas</a>
+                    <a href="" class="link-postagens"><i class="bi bi-journal-album"></i> Revistas</a>
                     <a href="" class="link-postagens"><i class="bi bi-journal-text"></i> Gêneros</a>
                     <a href="" class="link-postagens"><i class="bi bi-calendar2-date"></i> Eventos</a>
                     <a href="" class="link-postagens"><i class="bi bi-globe"></i> Novidades</a>
@@ -69,10 +69,10 @@
                         <span>Ana Caroline - @Caah_</span>
                     </div>
                     <div class="publicacao">
-                        <span>Uau, essa fanart tá simplesmente incrível! 😍 Eu adorei cada detalhe!</span>
+                        <span>Esse cara tem que ficar na cadeia pro resto da vida dele</span>
                     </div>
                     <div class="img-post">
-                        <img src="assets/img/postagem-livro.jpg" alt="">
+                        <img src="assets/img/diddyfdp.jpg" alt="">
                     </div>
                     <div class="icons-post">
                         <i class="bi bi-heart" onclick="Like()" id="like"></i>
@@ -83,13 +83,13 @@
                 <section class="postagem">
                     <div class="conta">
                         <img class="perfil-post" src="assets/img/fotoperfil.png" alt="">
-                        <span>@Ana Caroline - @Caah_</span>
+                        <span>Ana Caroline - @Caah_</span>
                     </div>
                     <div class="publicacao">
-                        <span>Uau, essa fanart tá simplesmente incrível! 😍 Eu adorei cada detalhe!</span>
+                        <span>Alguém avisa ela que ela ta brigando sozinha</span>
                     </div>
                     <div class="img-post">
-                        <img src="assets/img/postagem-livro.jpg" alt="">
+                        <img src="assets/img/camilacabello.jpg" alt="">
                     </div>
                     <div class="icons-post">
                         <i class="bi bi-heart">  </i>
@@ -103,24 +103,24 @@
                 <nav class="sub-comunidade">
                     <select class="sub-comunidade"name="" id="">
                         <option value="pt">Sub-Comunidades</option>
-                        <option value="pt">Trono de Vidro</option>
-                        <option value="pt">Povo do Ar</option>
-                        <option value="pt">ACOTAR</option>
-                        <option value="pt">De Sangue e Cinzas</option>
-                        <option value="pt">Estilhaça-me</option>
-                        <option value="pt">Percy Jackson</option>
-                        <option value="pt">Harry Potter</option>
-                        <option value="pt">Anne Whit E</option>
-                        <option value="pt">Bridgerton</option>
-                        <option value="pt">A Maldição do Tigre</option>
-                        <option value="pt">Jogos Vorazes</option>
-                        <option value="pt">Tudo Pelo Jogo</option>
-                        <option value="pt">Sombra e Ossos</option>
-                        <option value="pt">Cidade da Lua Crescente</option>
-                        <option value="pt">Senhor dos Anéis</option>
-                        <option value="pt">Castelo Animado</option>
-                        <option value="pt">Caraval</option>
-                        <option value="pt">EUVUCP</option>
+                        <option value="pt">Celebridades Internacionais</option>
+                        <option value="pt">Celebridades brasileiras</option>
+                        <option value="pt">Reality Shows</option>
+                        <option value="pt">Casais famosos</option>
+                        <option value="pt">Moda e Tapete Vermelho</option>
+                        <option value="pt">Influenciadores digitais</option>
+                        <option value="pt">Escândalos Políticos</option>
+                        <option value="pt">Bandas</option>
+                        <option value="pt">Teorias sobre famosos</option>
+                        <option value="pt">Figuras históricas polêmicas</option>
+                        <option value="pt">Esporistas e Atletas</option>
+                        <option value="pt">Empresários Executivos</option>
+                        <option value="pt">Cancelamentos</option>
+                        <option value="pt">Conflito entre fãs</option>
+                        <option value="pt">Escândalos familiares</option>
+                        <option value="pt">Famosos e Fake News</option>
+                        <option value="pt">Filho de Famosos</option>
+                        <option value="pt">Polêmica cultural</option>
                     </select>
                 </nav>
             </section>
