Pagina de mais comentados (livro e cinema) e modificações de regras

--- a/teladenuncias.html
+++ b/teladenuncias.html
@@ -160,8 +160,8 @@
         </div>
     </div>
 
-    <main class="main-info">
-        <div class="img-logo">
+    <footer class="main-info">
+        <div class="img-logoFooter">
             <img src="assets/img/4_Sem_Título_20240912103141-removebg-preview.png" alt="">
         </div>
         <div class="info-box">
@@ -178,6 +178,6 @@
             <span><i class="bi bi-instagram"></i> Istagram</span>
 
         </div>
-    </main>
+    </footer>
 
 </body>
