Pagina de suporte atualizada

--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="assets/home.css">
+    <link rel="shortcut icon" href="assets/img/logoOlho.png" type="image/x-icon">
     <title>Home</title>
 </head>
 <body>
@@ -44,6 +45,45 @@
         </section>
     </header>
     <main>
+        <section class="text-parallax01">
+            <span>Descubra, aprenda e conecte-se.</span>
+        </section>
+        <section class="parallax01" id="img">
+            <span>UM UNIVERSO DE SABERES AO SEU ALCANCE.</span>
+            <span id="spanWelcome">BEM-VINDO (A) AO ORÁCULO!</span>
+        </section>
+        <section class="parallax" id="img01">
+        </section>
+        <section class="text-parallax">
+            <p>
+                Em um mundo cada vez mais digital e interconectado, o acesso à informação e à cultura se tornou um
+                direito fundamental.
+                Nesse contexto, nós da Oráculo surgimos como um farol, iluminando o caminho para uma educação de
+                qualidade
+                e a inclusão digital.</p>
+        </section>
+        <section class="parallax" id="img02">
+        </section>
+        <section class="text-parallax">
+            <p>Alinhado com os Objetivos de Desenvolvimento Sustentável (ODS), especificamente o ODS 4 - Educação de
+                Qualidade, o Oráculo se posiciona como um espaço virtual que promove o aprendizado contínuo, o acesso à
+                informação e a troca de conhecimentos. Ao abrigar uma vasta gama de comunidades, desde livros até
+                filmes, o site democratiza o acesso à cultura, permitindo que pessoas de todas as idades e regiões do
+                Brasil tenham contato com diferentes formas de expressão artística e intelectual.
+            </p>
+        </section>
+        <section class="parallax" id="img03">
+        </section>
+        <section class="text-parallax">
+            <p>Mas o Oráculo vai além de ser apenas um repositório de informações. Ele se configura como um ambiente
+                social virtual, onde os usuários podem interagir, trocar ideias e construir conhecimentos de forma
+                colaborativa. A plataforma oferece ferramentas que permitem a criação de grupos de estudo, fóruns de
+                discussão e outras atividades que estimulam o debate e a reflexão sobre temas relevantes.
+            </p>
+        </section>
+        <section class="parallax" id="img04">
+        </section>
+        
         <h2>Principais Comunidades</h2>
         <section class="box-comunidades">
             <div class="comunidades">
