--- a/regras.html
+++ b/regras.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Comunidades</a></li>
                 <li><a href="#">Suporte</a></li>
                 <li><a href="#">Reportar</a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#">Sair</a></li>
             </ul>
             <div class="linha"></div>
             <section class="account">
