--- a/snmariafifi.html
+++ b/snmariafifi.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="assets/snmariafifi.css">
+    <link rel="stylesheet" href="assets/sobrenos/snmariafifi.css">
     <title>Sobre nós Maria Fifi</title>
 </head>
 
